# zed-sieve

./: .gitbook.yaml  .gitignore  Cargo.toml  README.md  extension.toml
.zed/: settings.json
data/: example.sieve  settings.json
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/learn/: language-servers.md  tree-sitter.md  zed-extensions.md
examples/: example.sieve
languages/sieve/: TODO.md  config.toml  highlights.scm
server/src/: server.ts
src/: extensions.rs  language_server.rs  lib.rs
